# Rayleigh-Benard-Convection

./: LICENSE  README.md
cpp/: CMakeLists.txt
cpp/include/: def.h  herring_func.hpp  lhc_func.hpp  observer_type.h  solver_type.h  state_type.h  utils.h
cpp/programs/: herring_model.cpp  lhc_model.cpp
cpp/src/: def.cpp  observer_type.cpp  solver_type.cpp  state_type.cpp  utils.cpp
mathematica/: Saltzman.nb  scretch.nb  未命名-1.nb
python/: CurvePlot.py  RBCField.py  genNums.py  plotNuEvolution.py  plotTemperatureProfile.py
